[PatchRelease][Part1] Prepare April Patch Releases (#39877)
* [Automation] Generate Fluent Lite from help#package-2024-03-01-preview (#39848)

* Increment package versions for devcenter releases (#39851)

* Increment package versions for selfhelp releases (#39854)

* Increment package versions for standbypool releases (#39856)

* [Automation] Generate Fluent Lite from confidentialledger#package-preview-2023-06 (#39855)

* [Automation] Generate Fluent Lite from confidentialledger#package-preview-2023-06

* ignore api-version in playback

---------

Co-authored-by: Weidong Xu <weidxu@microsoft.com>

* Regen devcenter from latest main (#39836)

* Increment package versions for confidentialledger releases (#39859)

* [Automation] Generate Fluent Lite from support#package-2024-04 (#39860)

* [Automation] External Change

* [Automation] Generate Fluent Lite from support#package-2024-04

* Update CHANGELOG.md

---------

Co-authored-by: Weidong Xu <weidxu@microsoft.com>

* Increment package versions for support releases (#39864)

* Added capability to use (and enforce) native netty transport in azure-cosmos-spark (#39834)

* Add capability to use (and enforce) native netty transport in azure-cosmos-spark

* Update pom.xml

* Fix build breaks

* Update sdk/cosmos/azure-cosmos-spark_3_2-12/docs/configuration-reference.md

Co-authored-by: Annie Liang <64233642+xinlian12@users.noreply.github.com>

* Fixing build  breaks regarding antrun plugin

* Update pom.xml

* Update sdk/cosmos/azure-cosmos-spark_3_2-12/docs/configuration-reference.md

Co-authored-by: Kushagra Thapar <kushuthapar@gmail.com>

* Changelogs

* Update CHANGELOG.md

* Update CHANGELOG.md

---------

Co-authored-by: Annie Liang <64233642+xinlian12@users.noreply.github.com>
Co-authored-by: Kushagra Thapar <kushuthapar@gmail.com>

* Adding azure-core-http-netty dependency to resolve conflicts (#39786)

* [Automation] Generate Fluent Lite from hyb